// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should enable verbose mode in CleanWebpackPlugin 1`] = `
Array [
  CleanWebpackPlugin {
    "options": Object {
      "allowExternal": false,
      "dry": false,
      "root": "~/scripts/__tests__",
      "verbose": true,
    },
    "paths": Array [
      "build",
    ],
  },
]
`;

exports[`should merge user webpack config 1`] = `
Object {
  "@": "~/src",
  "foo": "bar",
  "rsg-codemirror-theme.css": "codemirror/theme/hl-theme.css",
  "rsg-components": "~/lib/rsg-components",
  "vue$": "vue/dist/vue.esm.js",
}
`;

exports[`should not owerwrite user DefinePlugin 1`] = `
Array [
  DefinePlugin {
    "definitions": Object {
      "process.env.PIZZA": "\\"salami\\"",
    },
  },
  DefinePlugin {
    "definitions": Object {
      "process.env.NODE_ENV": "\\"test\\"",
      "process.env.STYLEGUIDIST_ENV": "\\"development\\"",
    },
  },
]
`;

exports[`should prepend requires as webpack entries 1`] = `
Array [
  "a/b.js",
  "c/d.css",
  "~/lib/index",
  "~/node_modules/react-dev-utils/webpackHotDevClient.js",
]
`;

exports[`should set aliases 1`] = `
Object {
  "@": "~/src",
  "rsg-codemirror-theme.css": "codemirror/theme/hl-theme.css",
  "rsg-components": "~/lib/rsg-components",
  "vue$": "vue/dist/vue.esm.js",
}
`;
